--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -17,7 +17,7 @@
     color: #E7E2E2;
 }
 
-button{
+.sidebar-btn{
     display: flex;
     align-items: center;
     justify-content: baseline;
@@ -28,13 +28,14 @@ button{
     font-size: 16px;
     color: #E7E2E2;
     width:fit-content;
+    gap: 8px;
 }
 
-button:hover, a:hover{
+.sidebar-btn:hover, a:hover{
     cursor: pointer;
     color: #A4A7AB;
 }
 
-img{
-    padding-right: 8px;
+.sidebar-icon:hover{
+    fill:#A4A7AB;
 }
