--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,10 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   list-style: none;
 }
+
+button {
+  border: none;
+  background: none;
+  display: flex;
+  align-items: center;
+}
