--- a/src/components/TableRow/tableRow.css
+++ b/src/components/TableRow/tableRow.css
@@ -12,6 +12,7 @@
 }
 
 .table-data {
+    font-weight:500;
     text-align: center;
     vertical-align: middle; /* Centraliza verticalmente o conteúdo das células */
 }
