página home completa

--- a/src/components/TableRow/tableRow.css
+++ b/src/components/TableRow/tableRow.css
@@ -1,6 +1,6 @@
 .table-row {
     height: 80px;
-    border-bottom: 1px solid #E7E2E2;
+    border-bottom: 1px solid #E7E2E2
 }
 
 .table-row td:first-child{
