--- a/src/components/OrcamentoData/orcamentoData.css
+++ b/src/components/OrcamentoData/orcamentoData.css
@@ -1,7 +1,8 @@
 .orcamentoData{
+    margin-top: 88px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     width: 100%;
+    gap: 24px;
 }
