adiciona table rows dinâmicas

--- a/src/components/HeaderRow/orcamentoDataRow.css
+++ b/src/components/HeaderRow/orcamentoDataRow.css
@@ -1,10 +1,24 @@
-.headerRow{
+.row{
     width: 100%;
     height: 48px;
     display: grid;
     grid-template-columns: 10% 10% 20% 12.5% 12.5% 12.5% 12.5% 10%;
     justify-items: center;
     align-items: center;
+}
+
+.header-row{
     background: #717A84;
 }
+
+.delete-btn{
+    color: #fff;
+}
+
+.delete-btn:hover{
+    color: #E7E2E2;
+    cursor: pointer;
+}
+
+
 
