--- a/src/components/HeaderRow/orcamentoDataRow.css
+++ b/src/components/HeaderRow/orcamentoDataRow.css
@@ -1,22 +1,30 @@
 .row{
-    width: 100%;
     height: 48px;
     display: grid;
     grid-template-columns: 10% 10% 20% 12.5% 12.5% 12.5% 12.5% 10%;
     justify-items: center;
     align-items: center;
+    background: #E7E2E2;
+    color: #2D3F51;
+    margin-inline: 10px;
+    margin-block: 8px;
+    border-radius: 20px;
+    font-weight: 600;
 }
 
 .header-row{
     background: #717A84;
+    color: #fff;
+    margin-inline: 0px;
+    border-radius: 0px;
 }
 
 .delete-btn{
-    color: #fff;
+    color: #2D3F51;
 }
 
 .delete-btn:hover{
-    color: #E7E2E2;
+    color: #fff;
     cursor: pointer;
 }
 
