--- a/src/components/TableBtn/tableBtn.css
+++ b/src/components/TableBtn/tableBtn.css
@@ -1,7 +1,10 @@
 .table-load-more{
     display: flex;
     align-items: center;
-    height: 80px;
+    justify-content: center;
+    height: 48px;
+    margin-bottom: 8px;
+    width: 100%;
 }
 
 .load-btn{
