--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,11 +1,12 @@
 .header{
     color: #2D3F51;
-    width: 100vw;
+    width:100%;
     height: 64px;
     display: flex;
     align-items: center;
     justify-content: center;
-    position: absolute;
+    position: relative;
+    margin-bottom: 20px;
 }
 
 .user-button {
