--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -2,3 +2,9 @@
     background-color: #E7E2E2;
     display: flex;
 }
+
+.content{
+    margin-left: 220px;
+    height: 100vh;
+    width: 100%;
+}
