--- a/src/components/NavRow/NavRow.css
+++ b/src/components/NavRow/NavRow.css
@@ -5,3 +5,16 @@
     margin-inline: 64px;
     gap: 16px;
 }
+
+.nav-btn{
+    text-decoration: none;
+    font-size: 16px;
+    color: #fff;
+    padding: 6px 12px 6px 12px;
+    border-radius: 20px;
+}
+
+.nav-btn:hover{
+    filter: brightness(1.5);
+    cursor: pointer;
+}
