--- a/src/pages/Calculo/calculo.css
+++ b/src/pages/Calculo/calculo.css
@@ -17,3 +17,44 @@
     justify-content: center;
     gap: 24px;
 }
+
+.calculo-table{
+    width: 480px;
+    padding-block: 16px;
+    background: #A4A7AB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    color: #2D3F51;
+    font-weight: 500;
+}
+
+.calculo-title-row{
+    width: 100%;
+    background: #717A84;
+    color: #E7E2E2;
+    padding-block: 12px;
+    text-align: center;
+    margin-bottom: 12px;
+}
+
+.calculo-table-content{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+
+.total-row{
+    background: #2D3F51;
+    color: #E7E2E2;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-block: 12px;
+    border-radius: 20px;
+}
