--- a/src/pages/Proposta/proposta.css
+++ b/src/pages/Proposta/proposta.css
@@ -2,7 +2,8 @@
     display: flex;
 }
 
-.content {
+.proposta-content {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
