--- a/src/components/NavRow/NavRow.css
+++ b/src/components/NavRow/NavRow.css
@@ -12,9 +12,23 @@
     color: #fff;
     padding: 6px 12px 6px 12px;
     border-radius: 20px;
+    display: flex;
+    justify-content: center;
 }
 
 .nav-btn:hover{
     filter: brightness(1.5);
     cursor: pointer;
+}
+
+.cancelar-modal {
+    border-radius: 20px;
+}
+
+.cancelar-modal button.swal2-confirm {
+    background-color: #CB4646;
+}
+
+.cancelar-btn{
+    width: 80px;
 }
