--- a/src/pages/Proposta/proposta.css
+++ b/src/pages/Proposta/proposta.css
@@ -1,15 +1,47 @@
 .proposta {
     display: flex;
+    flex-direction: column;
 }
 
 .proposta-content {
     width: 100%;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
-.nav {
-    width: 100%;
-    margin-block: 20px;
+.pdf-nav{
+    position: absolute;
+    right: 15%;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.pdf-btn{
+    color: #fff;
+    padding-inline: 16px;
+    padding-block: 8px;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.pdf-btn.gerar{
+    background: #2D3F51;
+}
+
+.pdf-btn.voltar{
+    background: #CB4646;
+}
+
+.pdf-btn.editar{
+    background: #717A84;
+}
+
+.pdf-btn:hover{
+    filter: brightness(1.5);
+    cursor: pointer;
 }
